backup-oke/ingress-all.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","nginx.ingress.kubernetes.io/force-ssl-redirect":"true","nginx.ingress.kubernetes.io/ssl-redirect":"true"},"name":"buyflow-ingress","namespace":"buyflow"},"spec":{"ingressClassName":"nginx","rules":[{"host":"buyflow-system.168-110-117-4.nip.io","http":{"paths":[{"backend":{"service":{"name":"buyflow-backend-service","port":{"number":8080}}},"path":"/api","p [...]
      nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
    creationTimestamp: "2026-06-27T06:31:09Z"
    generation: 2
    name: buyflow-ingress
    namespace: buyflow
    resourceVersion: "421046"
    uid: a2acf2eb-d664-49a4-aa78-dce9c6024976
  spec:
    ingressClassName: nginx
    rules:
    - host: buyflow-system.168-110-117-4.nip.io
      http:
        paths:
        - backend:
            service:
              name: buyflow-backend-service
              port:
                number: 8080
          path: /api
          pathType: Prefix
        - backend:
            service:
              name: buyflow-frontend-service
              port:
                number: 3000
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - buyflow-system.168-110-117-4.nip.io
      secretName: buyflow-tls
  status:
    loadBalancer:
      ingress:
      - ip: 168.110.117.4
kind: List
metadata:
  resourceVersion: ""
